--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,17 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+*.iml
+misc.xml
+modules.xml
+vcs.xml
+inspectionProfiles/
